--- a/myblog/blog/templates/blog/post_list.html
+++ b/myblog/blog/templates/blog/post_list.html
@@ -1,32 +1,12 @@
-{% load staticfiles %}
-<html>
-        <head>
-	    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-            <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-            <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-            <link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
-            <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-            <title>Molta'ans Blog</title>
-        </head>
-        <body>
-            <div class="page-header">
-                <h1><a href="">Molta`an's Blog</a></h1>
+{% extends 'blog/base.html' %}
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
             </div>
-
-            <div class="content container">
-        	<div class="row">
-            	    <div class="col-md-8">
-                	{% for post in posts %}
-                    	   <div class="post">
-                        	<div class="date">
-                            	    {{ post.published_date }}
-                        	</div>
-                        	<h1><a href="">{{ post.title }}</a></h1>
-                        	<p>{{ post.text|linebreaks }}</p>
-                   	    </div>
-               		{% endfor %}
-        	    </div>
-       		 </div>
-	    </div>
-        </body>
-    </html>
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaks }}</p>
+       </div>
+    {% endfor %}
+{% endblock content %}
