--- a/myblog/blog/static/css/blog.css
+++ b/myblog/blog/static/css/blog.css
@@ -46,5 +46,11 @@
     .post h1 a, .post h1 a:visited {
         color:#046485;
         font-family: 'Nunito';
-        font-size:22px;
+        font-size:26px;
+    }
+    .btn {
+        color:#000000;
+        float: right;
+        font-family: 'Lato';
+        font-size: 16px;
     }
