--- a/myblog/blog/templates/blog/base.html
+++ b/myblog/blog/templates/blog/base.html
@@ -13,6 +13,7 @@
                 {% if user.is_authenticated %}
                     <a href="{% url 'blog.views.post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
                 {% endif %}
+                <a href="{% url 'unpublished' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
                 <h1><a href="/">Moltaan's Blog</a></h1>
             </div>
 
