--- a/myblog/blog/templates/blog/post_detail.html
+++ b/myblog/blog/templates/blog/post_detail.html
@@ -1,15 +1,17 @@
 {% extends 'blog/base.html' %}
-{% block content %}
-    <div class="post">
-        {% if post.published_date %}
-            <div class="date">
-                {{ post.published_date }}
+
+    {% block content %}
+        <div class="post">
+            <div class=btn-toolbar>
+                {% if post.published_date %}
+                    {{ post.published_date }}
+                {% else %}
+                    <a class="btn btn-default btn-lg" href="{% url "blog.views.post_publish" pk=post.pk %}"><span>Publish</span></a>
+                {% endif %}
+                <a class="btn btn-default btn-lg" href="{% url "post_edit" pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+                <a class="btn btn-default btn-lg" href="{% url "post_remove" pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
             </div>
-        {% endif %}
-        {% if user.is_authenticated %}
-            <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        {% endif %}
-        <h1><a>{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaks }}</p>
-    </div>
-{% endblock %}
+            <h1>{{ post.title }}</h1>
+            <p>{{ post.text|linebreaks }}</p>
+        </div>
+    {% endblock %}
