Equal buttons and published date display fixed

--- a/myblog/blog/static/css/blog.css
+++ b/myblog/blog/static/css/blog.css
@@ -50,7 +50,9 @@
     }
     .btn {
         color:#000000;
-        float: right;
         font-family: 'Lato';
         font-size: 16px;
+    }
+    .btn-group {
+    float: right;
     }
